# simple_jobs

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml
migrations/2022-05-14-202343_create_job_info/: down.sql  up.sql
src/: fs_job.rs  lib.rs  schema.rs  sqlite_job.rs
tests/: diesel_sqlite_job.rs  fs_job.rs
