[package]
name = "simple_jobs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Very simple persistence layer on top of Tokio tasks."
authors = [
    "Walter Moreira <walter@waltermoreira.net>",
    "Joe Stubbs <joestubbs5@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
diesel_jobs = ["diesel", "diesel_migrations"]


[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
chrono = { version = "0.4" }


[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.3.0"
